# job_salaries

./: .gitignore  Makefile  README.md  job_salaries.py  pyproject.toml
job_salaries/: job_salaries.py
