[tool.poetry]
name = "job_salaries"
version = "0.1.0"
description = ""
authors = ["alena-yudzina <lenok.ok.lol@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
python-dotenv = "^0.19.0"
terminaltables = "^3.1.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
job_salaries = "job_salaries:main"
